--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      TZ: Asia/Seoul
-      WATCHTOWER_CLEANUP: 'true'
+      - TZ=Asia/Seoul
+      - WATCHTOWER_CLEANUP=true
     restart: always
