--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - victoriametrics
     networks:
       - monitoring
+    environment:
+      - "TZ=Asia/Seoul"
 
   prometheus:
     image: prom/prometheus
@@ -39,6 +41,8 @@ services:
     restart: always
     networks:
       - monitoring
+    environment:
+      - "TZ=Asia/Seoul"
 
   node_exporter:
     image: prom/node-exporter
@@ -57,6 +61,8 @@ services:
     restart: always
     networks:
       - monitoring
+    environment:
+      - "TZ=Asia/Seoul"
 
   victoriametrics:
     image: victoriametrics/victoria-metrics
@@ -71,3 +77,5 @@ services:
     restart: always
     networks:
       - monitoring
+    environment:
+      - "TZ=Asia/Seoul"
